--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^3.1.0",
+        "dayjs": "^1.11.6",
         "vue": "^3.2.38",
         "vue-loader": "^17.0.0",
         "vue-router": "^4.0.13"
